--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,9 @@ on:
   push:
     tags: [ "*" ]
 
+env:
+  IMAGE_NAME: ${{ github.repository }}
+  
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -28,7 +31,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5.5.1
         with:
-          images: ghcr.io/rekyuu/riichi-me
+          images: ghcr.io/${{ env.IMAGE_NAME }}
           tags: type=ref,event=tag
 
       - name: Build and push Docker image
